fixed structure and add gitignore

--- a/manifest.json
+++ b/manifest.json
@@ -13,15 +13,15 @@
         "default_popup": "popup.html",
         "default_title": "Twitch Ad Blocker",
         "default_icon": {
-            "16": "icon16.png",
-            "48": "icon48.png",
-            "128": "icon128.png"
+            "16": "icons/icon16.png",
+            "48": "icons/icon48.png",
+            "128": "icons/icon128.png"
         }
     },
     "icons": {
-        "16": "icon16.png",
-        "48": "icon48.png",
-        "128": "icon128.png"
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
     },
     "host_permissions": [
         "*://*.twitch.tv/*",
